force-app/main/default/objects/ContinueBatchProcessing__e/ContinueBatchProcessing__e.object-meta.xml
<CustomObject>
    <label>Continue Batch Processing</label>
    <pluralLabel>Continue Batch Processing Events</pluralLabel>
</CustomObject>