force-app/main/default/objects/ContinueBatchProcessing__e/fields/currentOffset__c.field-meta.xml
<CustomField>
    <fullName>currentOffset__c</fullName>
    <label>Current Offset</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>