force-app/main/default/objects/ContinueBatchProcessing__e/fields/maxRecords__c.field-meta.xml
<CustomField>
    <fullName>maxRecords__c</fullName>
    <label>Max Records</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>