force-app/main/default/objects/ContinueBatchProcessing__e/fields/totalBulkAPICalls__c.field-meta.xml
<CustomField>
    <fullName>totalBulkAPICalls__c</fullName>
    <label>Total Bulk API Calls</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>