force-app/main/default/objects/ContinueBatchProcessing__e/fields/totalProcessed__c.field-meta.xml
<CustomField>
    <fullName>totalProcessed__c</fullName>
    <label>Total Processed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>